Show nav toggle button
Fixes #5

--- a/assets/scss/imports/_header.scss
+++ b/assets/scss/imports/_header.scss
@@ -8,12 +8,20 @@
     color: $color-black;
     height: 60px;
     margin-bottom: 40px;
-    justify-content: space-between;
+    justify-content: start;
     padding: 0 40px;
     a {
         font-size: 21px;
         font-weight: 700;
     }
+}
+
+.Header-button {
+  margin-left: -3rem;
+}
+
+[dir] .Header-button {
+  border: 0;
 }
 
 .Header-Utils {
