--- a/assets/scss/imports/_header.scss
+++ b/assets/scss/imports/_header.scss
@@ -16,12 +16,14 @@
     }
 }
 
-.Header-button {
+[dir=ltr] .Header-button {
   margin-left: -3rem;
+  border: 0 none;
 }
 
-[dir] .Header-button {
-  border: 0;
+[dir=rtl] .Header-button {
+  margin-right: -3rem;
+  border: 0 none;
 }
 
 .Header-Utils {
